log
Thu 17 Mar 2022 02:32:50 PM UTC: 
 tests:  0|6
total_score: 0/70
c6d4601
Thu 17 Mar 2022 02:38:01 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* lista= (list*) malloc (sizeof(lista));
      |   ^~~~
      |   List
list.c:32:17: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   list* lista= (list*) malloc (sizeof(lista));
      |                 ^~~~
      |                 lista
list.c:32:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:22: error: expected expression before ‘)’ token
   32 |   list* lista= (list*) malloc (sizeof(lista));
      |                      ^
list.c:33:8: error: request for member ‘head’ in something not a structure or union
   33 |   lista->head=NULL;
      |        ^~
list.c:34:8: error: request for member ‘tail’ in something not a structure or union
   34 |   lista->tail=NULL;
      |        ^~
list.c:35:8: error: request for member ‘current’ in something not a structure or union
   35 |   lista->current=NULL;
      |        ^~
list.c:36:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   36 |   return lista;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
08a9abe
Thu 17 Mar 2022 02:38:23 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* list= (list*) malloc (sizeof(list));
      |   ^~~~
      |   List
list.c:32:21: error: expected expression before ‘)’ token
   32 |   list* list= (list*) malloc (sizeof(list));
      |                     ^
list.c:33:7: error: request for member ‘head’ in something not a structure or union
   33 |   list->head=NULL;
      |       ^~
list.c:34:7: error: request for member ‘tail’ in something not a structure or union
   34 |   list->tail=NULL;
      |       ^~
list.c:35:7: error: request for member ‘current’ in something not a structure or union
   35 |   list->current=NULL;
      |       ^~
list.c:36:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   36 |   return list;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
c0c5907
Thu 17 Mar 2022 02:39:00 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
428e41d
Thu 17 Mar 2022 02:40:06 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:39: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   List* lista= (List*) malloc (sizeof(list));
      |                                       ^~~~
      |                                       lista
list.c:32:39: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List* lista= (List*) malloc (sizeof(list));
      |         ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
63d08a6
Thu 17 Mar 2022 02:40:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a586c16
